<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/something_went_wrong"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_backHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#16296A"
        android:padding="12dp"
        android:text="Back Home"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Error" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/MainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.matteobattilana.weather.WeatherView
                android:id="@+id/weatherView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.github.matteobattilana.weather.WeatherView>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txt_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cairo_eg"
                    android:textColor="#FFF"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/_3_27_2021_16_08_pm"
                    android:textColor="#FFF"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="170dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/txt_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/clear"
                    android:textColor="#FFF"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/txt_degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center"
                    android:text="@string/_29_c"
                    android:textColor="#FFF"
                    android:textSize="85sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:id="@+id/txt_minT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/min_temp_05_05_am"
                    android:textColor="#FFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_maxT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/max_temp_05_05_am"
                    android:textColor="#FFF"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_backg"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/img_sunrise"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/sunrise_picture"
                        app:srcCompat="@drawable/sunrise"
                        app:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/txt_sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/sunrise"
                        android:textColor="#FFF"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_Vsunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/time"
                        android:textColor="#FFF"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_backg"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/img_sunset"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/sunset_picture"
                        app:srcCompat="@drawable/sunset"
                        app:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/txt_sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/sunset"
                        android:textColor="#FFF"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_Vsunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/time"
                        android:textColor="#FFF"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_backg"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/img_wind"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/wind_picture"
                        app:srcCompat="@drawable/wind"
                        app:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/txt_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/wind"
                        android:textColor="#FFF"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_Vwind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/time"
                        android:textColor="#FFF"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_backg"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/img_pressure"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/pressure_picture"
                        app:srcCompat="@drawable/pressure"
                        app:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/txt_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/pressure"
                        android:textColor="#FFF"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_Vpressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/time"
                        android:textColor="#FFF"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_backg"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/img_humidity"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/humidity_picture"
                        app:srcCompat="@drawable/humidity"
                        app:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/txt_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/humidity"
                        android:textColor="#FFF"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_Vhumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/time"
                        android:textColor="#FFF"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/info_layout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_backg"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/img_created"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/info_picture"
                        app:srcCompat="@drawable/info"
                        app:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/txt_created"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/created_by"
                        android:textColor="#FFF"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_Vcreated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/seif_eldin"
                        android:textColor="#FFF"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>